# ReflectiveAngelScriptWrapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  set_up.sh
include/AngelScriptWrapper/: AngelScriptEngine.hpp  Annotations.hpp  Annotations.tpp  Concepts.hpp  Engine.hpp  Engine.tpp  FuncDecl.hpp  FuncDecl.tpp  IsReferenceCounted.hpp  Object.hpp  OwnedObject.hpp  ReferenceType.hpp  SharedObject.hpp  Specialize.tpp  StructuralSpan.hpp  TypeDecl.hpp  TypeDecl.tpp  WeakReferenceType.hpp
readmes/: 01-WRAPPERS.md  02-TYPENAMES.md  03-PROPERTIES.md  04-FUNCTIONS.md  05-FUNCDEFS.md  06-REFERENCE-TYPES.md  07-TYPEDEFS.md  08-ENUMS.md  09-INTERFACES.md  1-WRAPPERS.md  10-VALUE-TYPES.md  2-TYPENAMES.md  3-PROPERTIES.md  4-FUNCTIONS.md  5-FUNCDEFS.md  6-TYPES.md  7-TYPEDEFS.md  8-ENUMS.md  9-INTERFACES.md
src/: AngelScriptEngine.cpp  Engine.cpp
tests/: CMakeLists.txt
tests/include/AngelScriptWrapperTests/: ScriptArray.hpp  ScriptDebugging.hpp  ScriptTestObject.hpp  StaticTesting.hpp  TestRefType.hpp
tests/src/: AngelScriptEngine.cpp  Annotations.cpp  Concepts.cpp  Engine.cpp  FuncDecl.cpp  IsReferenceCounted.cpp  Object.cpp  OwnedObject.cpp  SharedObject.cpp  TypeDecl.cpp
tests/src/engine/: EngineAuxiliaryMap.cpp  EngineConstruction.cpp  EngineEnums.cpp  EngineFuncdefs.cpp  EngineGlobalFunctions.cpp  EngineGlobalProperties.cpp  EngineInterfaces.cpp  EngineReferenceTypes.cpp  EngineTypedefs.cpp  EngineValueTypes.cpp
